--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,11 +68,14 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
 
     //Hilt
-    def hilt_version = '2.41'
+    def hilt_version = '2.42'
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt("com.google.dagger:hilt-android-compiler:$hilt_version")
     testImplementation("com.google.dagger:hilt-android-testing:$hilt_version")
     androidTestImplementation("com.google.dagger:hilt-android-testing:$hilt_version")
     kaptAndroidTest("com.google.dagger:hilt-android-compiler:$hilt_version")
     kaptTest("com.google.dagger:hilt-android-compiler:$hilt_version")
+
+    // Shared Preference
+    implementation "androidx.preference:preference-ktx:1.2.0"
 }
