--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,4 +95,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.4.1"
     implementation "androidx.navigation:navigation-compose:2.4.2"
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
+
+    // Timber
+    implementation "com.jakewharton.timber:timber:5.0.1"
 }
