--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,7 +95,13 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.4.1"
     implementation "androidx.navigation:navigation-compose:2.4.2"
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
+    implementation "com.github.skydoves:landscapist-glide:1.5.2"
 
     // Timber
     implementation "com.jakewharton.timber:timber:5.0.1"
+
+    // Paging
+    def paging_version = "3.1.1"
+    implementation "androidx.paging:paging-runtime:$paging_version"
+    implementation "androidx.paging:paging-compose:1.0.0-alpha15"
 }
